methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:7: error: ';' expected but 'true' found.
      retrun true
             ^